--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
   margin-bottom: 30px;
   font-size: 24px;
   text-align: left;
-  background-color: #6f5499;
+  background-color: #FF1493;
 }
 
 .main-header h1 {
