--- a/public/style.css
+++ b/public/style.css
@@ -4,10 +4,10 @@
   margin-bottom: 30px;
   font-size: 24px;
   text-align: left;
-  background-color: #E23F52;
+  background-color: #d81b60;
 }
 
 .main-header h1 {
   margin-top: 0;
-  color: #fff;
+  color: #fce4ec;
 }
