--- a/public/style.css
+++ b/public/style.css
@@ -4,10 +4,10 @@
   margin-bottom: 30px;
   font-size: 24px;
   text-align: left;
-  background-color: #e51c23;
+  background-color: #e91e63;
 }
 
 .main-header h1 {
   margin-top: 0;
-  color: #64ffda;
+  color: #fce4ec;
 }
