--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,13 @@
 }
 
 .myname {
-  float:left;
-  margin-left:5px;
-  color: #ffff00;
+  height: 58px;
+  width: 58px;
+  display: inline-block;
+  overflow: hidden;
+  vertical-align: middle;
+  border-radius: 5px;
+  float: left;
+  margin-right: 18px;
+  cursor: default;
 }
